--- a/mongo/package.json
+++ b/mongo/package.json
@@ -1,8 +1,12 @@
 {
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "chalk": "^5.3.0",
+    "cookie-parser": "^1.4.7",
+    "cookie-session": "^2.1.0",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "joi": "^17.13.3",
     "mongoose": "^8.7.1",
     "yargs": "^17.7.2"
