--- a/mongo/package.json
+++ b/mongo/package.json
@@ -8,7 +8,9 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
+    "multer": "^1.4.5-lts.1",
     "yargs": "^17.7.2"
   }
 }
